# gstreamer-example

./: .clang-format  CMakeLists.txt
src/: example_01.cpp
